--- a/dealstalker/src/main/webapp/WEB-INF/web.xml
+++ b/dealstalker/src/main/webapp/WEB-INF/web.xml
@@ -72,5 +72,11 @@
         <welcome-file>default.jsp</welcome-file>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
+    
+    <!-- <error-page>
+    			<error-code>404</error-code>
+    			<location>/WEB-INF/jsp/error404.jsp</location>
+    	</error-page> 	
+    --> 
 
 </web-app>
