--- a/scraper/requirements.txt
+++ b/scraper/requirements.txt
@@ -1,4 +1,3 @@
-js2xml
 asn1crypto==0.24.0
 attrs==18.2.0
 Automat==0.7.0
@@ -8,21 +7,30 @@ chardet==3.0.4
 constantly==15.1.0
 cryptography==2.3.1
 cssselect==1.0.3
+DateTime==4.2
 enum34==1.1.6
 fake-useragent==0.1.10
 hyperlink==18.0.0
 idna==2.7
 incremental==17.5.0
 ipaddress==1.0.22
+js2xml==0.3.1
 lxml==4.2.4
+mysql-connector-python==8.0.12
 parsel==1.5.0
+pkg-resources==0.0.0
+ply==3.11
+protobuf==3.6.1
 pyasn1==0.4.4
 pyasn1-modules==0.2.2
 pycparser==2.18
 PyDispatcher==2.0.5
 PyHamcrest==1.9.0
+pymongo==3.7.1
+PyMySQL==0.9.2
 pyOpenSSL==18.0.0
 PySocks==1.6.8
+pytz==2018.5
 queuelib==1.5.0
 requests==2.19.1
 Scrapy==1.5.1
@@ -32,6 +40,7 @@ scrapy-splash==0.7.2
 Scrapy-UserAgents==0.0.1
 service-identity==17.0.0
 six==1.11.0
+slimit==0.8.1
 stem==1.6.0
 Twisted==18.7.0
 urllib3==1.23
