--- a/dealstalker/pom.xml
+++ b/dealstalker/pom.xml
@@ -83,7 +83,11 @@
 		    <artifactId>mysql-connector-java</artifactId>
 		    <version>8.0.12</version>
 		</dependency>
-        
+		<dependency>
+	        <groupId>org.mongodb</groupId>
+	        <artifactId>mongo-java-driver</artifactId>
+        	<version>2.12.3</version>
+    	</dependency>
     </dependencies>
 
     <build>
